--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kissmybutton/motorcortex-code-typing",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/motorcortex-code-typing.cjs.js",
   "module": "dist/motorcortex-code-typing.esm.js",
   "browser": "dist/motorcortex-code-typing.umd.js",
@@ -60,6 +60,9 @@
       "path": "cz-conventional-changelog"
     }
   },
+  "dependencies":{
+    "codeflask": "1.4.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
@@ -67,7 +70,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@kissmybutton/motorcortex": "5.0.0",
-    "@kissmybutton/motorcortex-player": "^1.5.4",
+    "@kissmybutton/motorcortex-player": "1.5.11",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.5",
@@ -119,10 +122,10 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "whatwg-fetch": "^3.0.0",
-    "codeflask": "1.4.1"
+    "whatwg-fetch": "^3.0.0"
   },
   "peerDependencies": {
     "@kissmybutton/motorcortex": "5.0.0"
   }
+
 }
