--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kissmybutton/motorcortex-code-typing",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "main": "dist/motorcortex-code-typing.cjs.js",
   "module": "dist/motorcortex-code-typing.esm.js",
   "browser": "dist/motorcortex-code-typing.umd.js",
@@ -69,7 +69,7 @@
     "@babel/preset-env": "^7.9.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@kissmybutton/motorcortex": "6.2.3",
+    "@kissmybutton/motorcortex": "^6.2.3",
     "@kissmybutton/motorcortex-player": "1.5.11",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
@@ -126,6 +126,6 @@
     "whatwg-fetch": "^3.0.0"
   },
   "peerDependencies": {
-    "@kissmybutton/motorcortex": "6.2.3"
+    "@kissmybutton/motorcortex": "^6.2.3"
   }
 }
