--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kissmybutton/motorcortex-code-typing",
+  "name": "@donkeyclip/motorcortex-code-typing",
   "version": "1.0.12",
   "main": "dist/motorcortex-code-typing.cjs.js",
   "module": "dist/motorcortex-code-typing.esm.js",
@@ -18,13 +18,14 @@
     "build": "npm run build:lib && npm run build:demo",
     "build:lib": "rollup -c",
     "start": "npm run build:lib && concurrently -c \"cyan.bold,magenta.bold\" \"npm:build:lib -- -w\"  \"npm:start:demo\" ",
-    "start:demo": "webpack-dev-server --mode=development --config ./demo/webpack.config.js",
+    "start:demo": "webpack serve --config ./demo/webpack.config.js --mode=development --progress ",
     "build:demo": "webpack --mode=production --config ./demo/webpack.config.js",
     "test": "HERE GOES YOUR TEST TASK",
     "test:prod": "npm run lint",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
-    "prebuild": "rimraf dist"
+    "prebuild": "rimraf dist",
+    "prepare": "husky install"
   },
   "keywords": [
     "motorcortex",
@@ -69,13 +70,14 @@
     "@babel/preset-env": "7.15.0",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@kissmybutton/motorcortex": "7.2.4",
-    "@kissmybutton/motorcortex-player": "2.2.0",
+    "@donkeyclip/motorcortex": "7.4.0",
+    "@donkeyclip/motorcortex-player": "2.2.1",
     "@rollup/plugin-json": "4.1.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "@semantic-release/github": "7.2.3",
     "@semantic-release/npm": "7.1.3",
+    "@size-limit/preset-big-lib": "5.0.4",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "browserslist": "4.16.8",
@@ -96,7 +98,7 @@
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-standard": "4.1.0",
     "exports-loader": "0.7.0",
-    "husky": "4.3.8",
+    "husky": "^7.0.0",
     "imports-loader": "0.8.0",
     "json-stringify-safe": "5.0.1",
     "lint-staged": "10.5.4",
@@ -112,19 +114,13 @@
     "sass-loader": "8.0.2",
     "semantic-release": "17.4.5",
     "shelljs": "0.8.4",
-    "stylelint": "13.13.1",
-    "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-recommended": "3.0.0",
-    "stylelint-config-recommended-scss": "4.3.0",
-    "stylelint-config-sass-guidelines": "7.1.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylelint-scss": "3.20.1",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12",
+    "size-limit": "5.0.4",
+    "webpack": "5.53.0",
+    "webpack-cli": "4.8.0",
     "webpack-dev-server": "3.11.2",
     "whatwg-fetch": "3.6.2"
   },
   "peerDependencies": {
-    "@kissmybutton/motorcortex": ">= 6.4.1 < 8"
+    "@donkeyclip/motorcortex": ">= 6.4.1 < 8"
   }
 }
