--- a/package.json
+++ b/package.json
@@ -8,13 +8,8 @@
   "author": "Kiss My Button PC",
   "license": "MIT",
   "scripts": {
-    "update-force:packages": "./node_modules/npm-check-updates/bin/ncu -u && npm i",
-    "update:packages": "npm update --save/--save-dev",
-    "concurrently": "concurrently -c \"cyan.bold,magenta.bold\" --names \"JS,Styles\"",
-    "lint:styles": "stylelint  --allow-empty-input \"src/**.css\" \"src/**/*.scss\" --config .stylelintrc.json",
-    "lint:js": "eslint -c .eslintrc src/**/*.js",
-    "lint": "npm run concurrently \"npm:lint:js\" \"npm:lint:styles\"",
-    "lint:fix": "npm run concurrently  \"npm:lint:js -- --fix\" \"npm:lint:styles -- --fix\"",
+    "lint": "eslint -c .eslintrc src/**/*.js",
+    "lint:fix": "npm run lint -- --fix",
     "build": "npm run build:lib && npm run build:demo",
     "build:lib": "rollup -c",
     "start": "npm run build:lib && concurrently -c \"cyan.bold,magenta.bold\" \"npm:build:lib -- -w\"  \"npm:start:demo\" ",
@@ -22,7 +17,6 @@
     "build:demo": "webpack --mode=production --config ./demo/webpack.config.js",
     "test": "HERE GOES YOUR TEST TASK",
     "test:prod": "npm run lint",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "prebuild": "rimraf dist",
     "prepare": "husky install"
@@ -32,11 +26,8 @@
     "animation"
   ],
   "lint-staged": {
-    "*.json": [
+    "*.{json,css,yml}": [
       "prettier --write"
-    ],
-    "*.{css,scss}": [
-      "stylelint  \"src/**.css\" \"src/**/*.scss\" --config .stylelintrc.json --fix"
     ],
     "*.{js,jsx}": [
       "prettier --write",
@@ -67,16 +58,16 @@
   "devDependencies": {
     "@babel/cli": "7.15.7",
     "@babel/core": "7.15.8",
-    "@babel/eslint-parser": "7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
     "@babel/preset-env": "7.15.8",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@donkeyclip/motorcortex": "7.5.4",
     "@donkeyclip/motorcortex-player": "2.3.5",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "21.0.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.6",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@semantic-release/changelog": "6.0.0",
     "@semantic-release/git": "10.0.0",
     "@semantic-release/github": "8.0.1",
@@ -86,10 +77,10 @@
     "browserslist": "4.17.4",
     "caniuse-lite": "1.0.30001270",
     "commitizen": "4.2.4",
-    "coveralls": "3.1.1",
+    "concurrently": "^6.3.0",
+    "core-js": "^3.18.3",
     "css-loader": "6.4.0",
     "cz-conventional-changelog": "3.3.0",
-    "es6-promise": "4.2.8",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
@@ -99,21 +90,17 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-standard": "4.1.0",
-    "exports-loader": "3.0.0",
     "husky": "7.0.2",
-    "imports-loader": "3.0.0",
     "lint-staged": "11.2.3",
     "prettier": "2.4.1",
     "rimraf": "3.0.2",
     "rollup": "2.58.0",
     "rollup-plugin-terser": "7.0.2",
-    "sass-loader": "12.2.0",
     "semantic-release": "18.0.0",
     "size-limit": "5.0.5",
     "webpack": "5.58.2",
     "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.3.1",
-    "whatwg-fetch": "3.6.2"
+    "webpack-dev-server": "4.3.1"
   },
   "peerDependencies": {
     "@donkeyclip/motorcortex": "^7"
